@@ -6,8 +6,10 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 
 //TIP 코드를 <b>실행</b>하려면 <shortcut actionId="Run"/>을(를) 누르거나
 // 에디터 여백에 있는 <icon src="AllIcons.Actions.Execute"/> 아이콘을 클릭하세요.
@@ -44,43 +46,30 @@ public class Main extends Application {
 
         // 관리자 권한이 있는지 확인
         try {
-            Process process = Runtime.getRuntime().exec("net session");
-            process.waitFor();
-            if (process.exitValue() == 0) {
-                System.out.println("이미 관리자 권한으로 실행 중");
-                return; // 이미 관리자 권한이면 실행하지 않음
+            // 실제 JAR 파일 경로 (빌드 도구에 따라 확인 필요)
+            String jarPath = "C:\\workspace\\ping\\build\\libs\\ping-1.0-SNAPSHOT.jar"; // 예시 경로
+            // PowerShell 명령어 구성
+            String command = "powershell -Command \"Start-Process java -ArgumentList '-jar \\\"" + jarPath + "\\\"' -Verb RunAs\"";
+            System.out.println("실행 명령어: " + command);
+
+            // 명령어 실행
+            ProcessBuilder builder = new ProcessBuilder("cmd.exe", "/c", command);
+            builder.redirectErrorStream(true);
+            Process process = builder.start();
+
+            // 출력 확인
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String line;
+            while ((line = reader.readLine()) != null) {
+                System.out.println(line);
             }
-        } catch (Exception e) {
-            System.out.println("관리자 권한 없음, 재실행 시도...");
-        }
 
-        // 현재 실행 중인 JAR 파일 경로 가져오기
-        String jarPath = getJarPath();
-
-        if (jarPath == null) {
-            System.out.println("JAR 파일 경로를 찾을 수 없습니다.");
-            return;
-        }
-
-        // 관리자 권한으로 재실행
-        try {
-            String command = "powershell -Command \"Start-Process java -ArgumentList '-jar \"" + jarPath + "\"' -Verb RunAs\"";
-            Runtime.getRuntime().exec(command);
-            System.exit(0); // 현재 프로세스 종료 후 관리자 권한으로 실행
-        } catch (IOException e) {
+            process.waitFor();
+        } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
     }
 
-    // 현재 실행 중인 JAR 파일의 경로를 가져오는 메서드
-    private String getJarPath() {
-        try {
-            return new File(Main.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getAbsolutePath();
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
-    }
 
 
 }
